<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="projetockeckevents.novaroma.br.projetocheckevents.MainActivity">


    <LinearLayout
        android:id="@+id/linearLayoutField"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/login_login"
                android:ems="10"
                android:id="@+id/edTxtLogin" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passawordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_senha"
                android:ems="10"
                android:id="@+id/edTxtSenha" />
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:text="@string/login_manter_conectado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ckbLoginAutomatico"
            android:layout_weight="1" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/login_login"
            android:background="#494848"
            android:textColor="#ffffff"
            android:id="@+id/btnLogar" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.27"
        android:layout_below="@id/linearLayoutField"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/login_message_cadastre"
            android:id="@+id/txtInfo"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/login_cadastro"
            android:textColor="@color/colorAccent"
            android:onClick="cadastrarUsuario"
            android:id="@+id/txtCadastro"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>

</RelativeLayout>